--- a/demo/src/main/resources/templates/list.html
+++ b/demo/src/main/resources/templates/list.html
@@ -3,17 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            height: 860px;
-            max-height: 860px;
-            overflow: auto;
-        }
 
-        h1 {
-            text-align: center;
-        }
+    <!-- 구글폰트 -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Gothic+A1:wght@500&display=swap" rel="stylesheet">
+
+    <style>
+*{
+	font-family: 'Gothic A1', sans-serif;
+}
+body {
+	width: 1024px;
+	height: 860px;
+	margin: 50px auto;
+	overflow: auto;
+	max-height: 860px;
+}
+
+header{
+
+}
+
+.top-header{
+    display : flex;
+    padding-left : 50px;
+}
+
+.top-header > img{
+    align-self : center;
+}
+
+.top-header > h2 {
+    margin-left : 30px;
+}
+
+.middle-header{
+    display: flex;
+    height : 70px;
+    margin-top : 20px;
+    margin-bottom : 50px;
+    border-top : 3px solid gray;
+    border-bottom : 3px solid gray;
+    justify-content : space-around;
+    align-items : center;
+
+
+}
+
 
         .board-container {
             width: 80%;
@@ -55,10 +92,6 @@
             border: 1px solid black;
             height: 200px;
         }
-        div{
-            margin: 10px;
-            border: 1px solid black;
-        }
         #board_hits_like{
             display: flex;
             justify-content:center;
@@ -67,15 +100,32 @@
     </style>
 </head>
 <body class="scroll">
-<div>
-    <a href="/mypage">Mypage</a>
-</div>
+<header>
+    <div class="top-header">
+        <img src="/images/logo.png" max-width="100%" height="40"/>
+        <h2>Welcome <span th:text="${dto.nickname}"></span> !</h2>
+        <form method="post" action="/logout">
+            <button >로그아웃</button><br/>
+        </form>
+    </div>
 
-<br/>
+    <div class="middle-header">
+        <a href="/mypage">Mypage</a>
+        <div class="searchbox">
+            <select name="search">
+                <option value="nickname">닉네임</option>
+                <option value="content">내용</option>
+            </select><input> <button>검색</button>
+        </div>
+        <a href="#"><button>글쓰기</button></a>
+        <a href="#"><button>알림</button></a>
+        <a href="#"><button>메세지</button></a>
 
-PRINCIPAL : <span sec:authentication="principal"></span>
-<hr>
-<h1>게시판</h1>
+
+    </div>
+</header>
+
+
 
 <div class="board-container">
     <th:block th:each="board : ${boardList}">
@@ -95,21 +145,7 @@ PRINCIPAL : <span sec:authentication="principal"></span>
             </div>
         </div>
     </th:block>
-
 </div>
-
-<form method="post" action="/logout">
-    <button >일반 로그아웃</button><br/>
-</form>
-
-
-<form method="post" action="/logout">
-    <button onclick="logout()">카카오 로그아웃</button><br/>
-</form>
-
-<button onclick="logoutAndRedirect()">네이버 로그아웃</button><br/>
-<button onclick="logoutAndRedirect()">구글 로그아웃</button><br/>
-
 
 <script>
     function logoutAndRedirect() {
