--- a/demo/src/main/resources/templates/join.html
+++ b/demo/src/main/resources/templates/join.html
@@ -10,42 +10,102 @@
 <body>
 <h1>회원가입</h1>
 <form name="joinform" action="/join" method="post" onsubmit="return false">
-    이메일 : <input name="email" id="usernameInput"><button onclick="checkDuplicate('usernameInput')">중복체크</button><br/>
-    비밀번호 : <input name="password" type="password"><br/>
-    사용할 닉네임 : <input name="nickname" id="nnameInput"><button onclick="checkDuplicate('nnameInput')">중복체크</button><br/>
-    성명 : <input name="name"><br/>
-    생년월일 : <input name="birth" id="birthInput" autocomplete="off"><br/> <!-- 달력 버튼 추가 -->
-    휴대폰 : <input name="phone"><br/>
-    주소 : <input name="addr"><br/>
-
+    <div>
+        <label for="usernameInput">이메일</label><br>
+        <input name="email" id="usernameInput">
+        <button onclick="checkDuplicate('usernameInput')">중복체크</button><br/>
+    </div>
+    <div>
+        <label for="passwordInput">비밀번호</label><br>
+        <input name="password" type="password" id="passwordInput"><br/>
+    </div>
+    <div>
+        <label for="nnameInput">사용할 닉네임</label><br>
+        <input name="nickname" id="nnameInput">
+        <button onclick="checkDuplicate('nnameInput')">중복체크</button><br/>
+    </div>
+    <div>
+        <label for="nameInput">성명</label><br>
+        <input name="name" id="nameInput"><br/>
+    </div>
+    <div>
+        <label for="birthInput">생년월일</label><br>
+        <input name="birth" id="birthInput" autocomplete="off"><br/>
+    </div>
+    <div>
+        <label for="phoneInput">휴대폰</label><br>
+        <input name="phone" id="phoneInput" placeholder="'-'제외하고 입력하슈"><br/>
+    </div>
+    <div>
+        <label>우편번호 검색</label><br>
+        <input name="zipcode" class="form-control zipcode"  placeholder="우편번호 입력">
+        <button class="btn btn-secondary search_addr_btn" style="width:80px;margin-left:5px;">검색</button>
+    </div>
+    <div>
+        <label>기본 주소</label><br>
+        <input name="addr1" class="form-control addr1"  placeholder="기본주소 입력">
+    </div>
+    <div>
+        <label>상세 주소</label><br>
+        <input name="addr2" class="form-control" placeholder="상세주소 입력">
+    </div>
     <button onclick="isValid()">회원가입</button>
 </form>
 
 <script>
-<!--    생년월일 입력 필드에 Datepicker를 적용합니다.-->
-    $(function() {
-        $("#birthInput").datepicker({
-            dateFormat: "yy-mm-dd", // 날짜 형식 설정 (연도-월-일)
-            changeMonth: true,      // 월 선택 가능
-            changeYear: true,       // 연도 선택 가능
-            yearRange: "c-100:c+10" // 년도 선택 범위 설정
+    <!--    생년월일 입력 필드에 Datepicker를 적용합니다.-->
+        $(function() {
+            $("#birthInput").datepicker({
+                dateFormat: "yy-mm-dd", // 날짜 형식 설정 (연도-월-일)
+                changeMonth: true,      // 월 선택 가능
+                changeYear: true,       // 연도 선택 가능
+                yearRange: "c-100:c+10" // 년도 선택 범위 설정
+            });
         });
+
+        const isValid = () => {
+            const form = document.joinform;
+            if (form.email.value.trim() == "")
+            {
+                alert("이메일을 입력하세요.");
+                return;
+            }
+            if (form.password.value.trim() == "")
+            {
+                alert("비밀번호를 입력하세요.");
+                return;
+            }
+            form.submit();
+        }
+</script>
+
+<script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+<script>
+
+    const search_addr_btn = document.querySelector('.search_addr_btn');
+    search_addr_btn.addEventListener('click',function(){
+       new daum.Postcode({
+                oncomplete: function(data) {
+                    console.log(data);
+                    const zipcode = document.querySelector('.zipcode');
+                    const addr1 = document.querySelector('.addr1');
+
+                    if(data.userSelectedType==='R')
+                    {
+                        addr1.value = data.roadAddress;
+                    }
+                    else
+                    {
+                        addr1.value = data.jibunAddress;
+                    }
+                    zipcode.value=data.zonecode;
+
+                }
+            }).open();
+
     });
 
-    const isValid = () => {
-        const form = document.joinform;
-        if (form.email.value.trim() == "")
-        {
-            alert("이메일을 입력하세요.");
-            return;
-        }
-        if (form.password.value.trim() == "")
-        {
-            alert("비밀번호를 입력하세요.");
-            return;
-        }
-        form.submit();
-    }
+
 </script>
 </body>
 </html>
