--- a/demo/src/main/resources/templates/mypage.html
+++ b/demo/src/main/resources/templates/mypage.html
@@ -30,7 +30,7 @@ header{
     padding-left : 50px;
 }
 
-.top-header > img{
+.top-header > a{
     align-self : center;
 }
 
@@ -105,7 +105,7 @@ main{
 <body>
 <header>
     <div class="top-header">
-        <img src="/images/logo.png" max-width="100%" height="40"/>
+        <a href="/list"> <img src="/images/logo.png" max-width="100%" height="40"/> </a>
         <h2><span th:text="${dto.nickname}"></span>'s Page</h2>
     </div>
     <nav>
