--- a/src/main/resources/templates/post.html
+++ b/src/main/resources/templates/post.html
@@ -58,8 +58,8 @@
     <h2>새 게시물 작성</h2>
     <form action="/post" method="post" enctype="multipart/form-data">
       <div class="form-group">
-        <label for="id">아이디:</label>
-        <input type="text" id="id" name="id" th:value="${#authentication.principal.username}" readonly /><br><br>
+        <label for="email">아이디:</label>
+        <input type="text" id="email" name="email" th:value="${#authentication.principal.username}" readonly /><br><br>
       </div>
       <div class="form-group">
         <label for="contents">게시물 내용:</label>
