--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,9 +7,9 @@
 <body>
 <h1>LOGIN</h1>
 
-<form action="/login" method="post">
-    ID : <input name="username"><br/>
-    PW : <input name="password" type="password"><br/>
+<form action="/login" method="post" onsubmit="return validateLoginForm()">
+    ID : <input name="username" id="username"><br/>
+    PW : <input name="password" type="password" id="password"><br/>
     <div class="form-group">
         <div class="form-check">
             <input type="checkbox" class="form-check-input" id="rememberMe" name="remember-me"/>
@@ -31,5 +31,21 @@
     <a href="/oauth2/authorization/google">구글 로그인</a>
 </div>
 <hr/>
+
+<script>
+    function validateLoginForm() {
+        var username = document.getElementById("username").value;
+        var password = document.getElementById("password").value;
+
+        if (!username || !password)
+        {
+            alert("아이디와 비밀번호를 입력하세요.");
+            return false;
+        }
+
+        return true;
+    }
+</script>
+
 </body>
 </html>
