--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -131,13 +131,13 @@ header{
             border: 1px solid #ccc;
             border-radius: 10px;
             padding: 10px;
-            text-align: center;
             margin-bottom: 20px;
         }
 
 
         .idbox{
-            margin-bottom : 20px;
+            padding-bottom : 20px;
+            border-bottom : 3px solid #4A596D;
         }
 
         /* contents 크기 조정 */
@@ -159,16 +159,33 @@ header{
             margin-left : 40px;
         }
         #board_contents{
-            border: 1px solid black;
+            border-bottom: 3px solid #4A596D;
             height:100px;
         }
         #board_img{
-            border: 1px solid black;
+            border-bottom: 1px solid #4A596D;
             height: 200px;
         }
-        #board_hits_like{
+        .date-box{
             display: flex;
-            justify-content:center;
+            justify-content : space-between;
+            padding : 30px;
+        }
+        .hits-like{
+            display: flex;
+        }
+        .hits-like > div{
+            margin-left : 90px;
+        }
+
+        .hits{
+            padding-top : 10px;
+            border-top : 1px solid #4A596D;
+        }
+
+        .like{
+            padding-top : 10px;
+            border-top : 1px solid #4A596D;
         }
 
     </style>
@@ -228,10 +245,16 @@ header{
                          alt="Thumbnail" width="200" height="auto" class="thumbnail">
                 </div>
                 <div id=board_contents class="contents" th:text="${board.contents}">contents</div>
-                <div th:text="${board.date}">date</div>
-                <div id="board_hits_like">
-                    <div th:text="${board.hits}">hits</div>
-                    <div th:text="${board.like_count}">like</div>
+                <div class="date-box">
+                    <div th:text="${board.date}">date</div>
+                    <div class="hits-like">
+                        <div >조회수
+                            <div class="hits" th:text="${board.hits}">hits</div>
+                        </div>
+                        <div >따봉!
+                            <div class="like" th:text="${board.like_count}">like</div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </th:block>
