--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -46,7 +46,7 @@ body {
 
 <div class="big">
 
-    <img src="/images/loginlogo.png" max-width="100%" height="400"/>
+    <img src="/images/nlogo.png" max-width="100%" height="400"/>
     <div class="loginform">
         <form action="/login" method="post" onsubmit="return validateLoginForm()">
             <input name="username" id="username" placeholder="EMAIL"><br/>
