--- a/src/main/resources/templates/join.html
+++ b/src/main/resources/templates/join.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 <h1>회원가입</h1>
+<img src="/images/nlogo.png" max-width="100%" height="400"/>
 <form name="joinform" action="/join" method="post" onsubmit="return false">
     <div>
         <label for="usernameInput">이메일</label><br>
